@@ -139,4 +139,10 @@ runtest strip-compressed.o 1
 testfiles testfile-debug-rel-ppc64.o
 runtest testfile-debug-rel-ppc64.o 1
 
+testfiles testfile-debug-rel-ppc64-z.o
+runtest testfile-debug-rel-ppc64-z.o 1
+
+testfiles testfile-debug-rel-ppc64-g.o
+runtest testfile-debug-rel-ppc64-g.o 1
+
 exit $status
