@@ -1,3 +1,8 @@
+2018-11-09  Mark Wielaard  <mark@klomp.org>
+
+	* run-strip-reloc.sh: Also test testfile-debug-rel-ppc64-z.o
+	testfile-debug-rel-ppc64-g.o.
+
 2018-11-12  Mark Wielaard  <mark@klomp.org>
 
 	* run-readelf-n.sh: Add testfile-annobingroup.o test.
