@@ -1,3 +1,7 @@
+2018-11-09  Mark Wielaard  <mark@klomp.org>
+
+	* elf_compress_gnu.c (elf_compress_gnu): Use elf_getdata.
+
 2018-11-12  Mark Wielaard  <mark@klomp.org>
 
 	* elf-knowledge.c (ELF_NOTE_GNU_BUILD_ATTRIBUTE_PREFIX): New define.
